Update .gitignore to exclude unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ config.py
 *.pyc
 __pycache__
 .env
+.DS_Store
+*.spec
+*.ipynb
+app_logo.icns
+build/
+cache/
+chroma_db/
+dist/
+faiss_index/
+*.txt
+obsidian-agent.py
+obsidian-assistant
+obsidian_agent_env/
+obsidian_rag_bot.py
+obsidian_rag_bot_co.py
